# ChangeLog for www-client/leechcraft-poshuku
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  22 Feb 2010; A. Vinogradov <spamslepnoga@inbox.ru>
  +leechcraft-poshuku-9999.ebuild, +metadata.xml:
  recommit in rion

  13 Feb 2010; G. Rudoy <0xd34df00d@gmail.com>
  +leechcraft-poshuku-9999.ebuild:
  Split build for Poshuku plugin.

*leechcraft-poshuku-9999 ( 13 Feb 2010; G. Rudoy )