@@ -2,6 +2,6 @@ DIST leechcraft-0.3.70.tar.bz2 2201204 RMD160 2c4a659f9c0364027dfbacbc18623a34b8
 DIST leechcraft-0.3.70_rc20100619.tar.bz2 2193369 RMD160 217913461f40cd8b96853c6108edf8bade61afa8 SHA1 1a1ed95fe26c09d34bb5af4d51b2375c3350c8b4 SHA256 8b91a0ed05ca0bc1949063090f1a52192faa47775d841cf8b6c35ba721cf7b63
 EBUILD leechcraft-poshuku-0.3.70.ebuild 485 RMD160 f54c2f3b21d2c0dc0d3b77748756aa27fa94a922 SHA1 1a7071e870de2fb7e32aa132e8838a119828f5b0 SHA256 6003cbf9090634fc3c070838530ec41a36e9646ac90a6995f8925e7ef45f3070
 EBUILD leechcraft-poshuku-0.3.70_rc20100619.ebuild 485 RMD160 f54c2f3b21d2c0dc0d3b77748756aa27fa94a922 SHA1 1a7071e870de2fb7e32aa132e8838a119828f5b0 SHA256 6003cbf9090634fc3c070838530ec41a36e9646ac90a6995f8925e7ef45f3070
-EBUILD leechcraft-poshuku-9999.ebuild 467 RMD160 dbe9cf170b2d1c28068c6369adb9fdcaccdbb9df SHA1 08ee616bc19ffba939bc899f50b850006b986e52 SHA256 cac7c3d0ed6c85eb3a00273240357b48f2f2edfb6afbbb084dce185ce1726c58
-MISC ChangeLog 421 RMD160 e3e6fe1398e20ca8940236b0040921f2c87bf117 SHA1 95678dac7e80973728fb81cef0d6b2d36d226495 SHA256 485a37fffbefe9f11e9962a6093e0e56171a7e9e7160dbf657767b31c8a20aae
+EBUILD leechcraft-poshuku-9999.ebuild 678 RMD160 a86a0241b04764e379e807b36ccd8f0093000e3c SHA1 ee7f1dad3a239bef63a93362dc5a62b0417ea07e SHA256 6c7fee4b585de5a4d99d405145ab6834f74a022e13594643bf1de79459faf43b
+MISC ChangeLog 539 RMD160 d0d176589ed92a47881e135c4d0b76da51729121 SHA1 6a237f38544434fa7b01e2e99bd749d4cff76b73 SHA256 7e16ed7ac93f6bcd2208e1f01cde8693d8a5deda0d1d1307fca0887684e619f8
 MISC metadata.xml 396 RMD160 7405f64e7c1677278c8e5d55d5e93c413c94c025 SHA1 84e66346a7fbf13d35550a31753d3ee773a5e4a0 SHA256 66b46a8a74fbefef7fd643b39dc447b55755065a124082946778516991421cc5
