@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  25 Jun 2010; G. Rudoy <0xd34df00d@gmail.com>
+  leechcraft-poshuku-9999.ebuild:
+  Added idn useflag for LC Poshuku.
+
   22 Feb 2010; A. Vinogradov <spamslepnoga@inbox.ru>
   +leechcraft-poshuku-9999.ebuild, +metadata.xml:
   recommit in rion
